--- a/style/style.css
+++ b/style/style.css
@@ -130,3 +130,27 @@ h1 {
     font-size: 30px;
     content: '';
 }
+
+footer {
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(99,99,99,1) 98%, rgba(164,164,164,1) 100%);
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    min-height: 80px;
+    display: flex;
+}
+
+.gachi-img{
+    height: 100%;
+    right: 0;
+    bottom: 0;
+    /* position: absolute; */
+}
+
+.foot-list{
+    display: flex;
+    justify-content: center;
+    color: #fff;
+}
