--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,9 @@
 
 body {
     box-sizing: border-box;
+    background-image: url('https://kartinkin.net/pics/uploads/posts/2022-08/thumbs/1661353804_75-kartinkin-net-p-fon-mario-dlya-skretch-krasivo-78.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container {
@@ -28,7 +31,7 @@ header {
     align-items: center;
     
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.527);
+    background-color: rgb(0 0 0 / 70%);
     padding: 0 20px;
     height: 100px;
     margin-bottom: 50px;
@@ -225,9 +228,6 @@ h1 {
 footer {
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(99,99,99,1) 98%, rgba(164,164,164,1) 100%);
-    position: absolute;
-    left: 0;
-    bottom: 0;
     width: 100%;
     min-height: 80px;
     display: flex;
@@ -245,3 +245,188 @@ footer {
     justify-content: center;
     color: #fff;
 }
+
+
+.slide-bar {
+    display: flex;
+    overflow: hidden;
+  
+}
+
+.block-slide {
+    min-height: 300px;
+    min-width: 300px;
+    height: 400px;
+    background-color: cornflowerblue;
+    margin-left: 20px;
+}
+
+.block-slide .text {
+    padding: 15px;
+}
+
+.block-slide img {
+    width: 100%;
+}
+
+
+.prev , .back {
+    background-color: rgba(0, 0, 0, 0.404);
+    color: #fff;
+    border-radius: 100%;
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    cursor: pointer;
+}
+
+.slider {
+    position: relative;
+}
+
+.prev {
+    right: 0px;
+    bottom: 50%;
+}
+
+.back{
+    left: 0px;
+    bottom: 50%;
+}
+
+
+.slider {
+    background-color: blueviolet;
+    position: relative;
+    height: 500px;
+    border-radius: 30px;
+    margin-bottom: 100px;
+    overflow: hidden;
+}
+.slide_show {
+    max-width: 400px;
+}
+
+.next {
+    position: absolute;
+    right: 0;
+    width: 80px;
+    height:80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    background-color: coral;
+    top: 40%;
+    right: 5%;
+    cursor: pointer;
+}
+
+.next:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.slide_show {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s;
+}
+
+.slider-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider-item-one {
+    background-color: darkblue;
+    height: 500px;
+    border-radius: 30px;
+    margin-bottom: 100px;
+    min-width: 400px;
+    max-width: 400px;
+}
+
+.slider-item-two {
+    background-color: rgb(44, 63, 36);
+    height: 500px;
+    border-radius: 30px;
+    margin-bottom: 100px;
+    min-width: 400px;
+    max-width: 400px;
+
+}
+
+.slider-item-three {
+    background-color: rgb(168, 78, 36);
+    height: 500px;
+    border-radius: 30px;
+    margin-bottom: 100px;
+    min-width: 400px;
+    max-width: 400px;
+
+}
+
+.slider-item-two {
+    background-color: rgb(148, 40, 106);
+    height: 500px;
+    border-radius: 30px;
+    margin-bottom: 100px;
+    min-width: 400px;
+    max-width: 400px;
+
+}
+
+.next-view {
+    position: relative;
+}
+
+
+
+
+.slider {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    z-index: 000000;
+  }
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+  .slide.active {
+    opacity: 1;
+  }
+
+
+  .prev {
+    position: absolute;
+    right: 0;
+    width: 80px;
+    height:80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    background-color: rgb(40, 115, 149);
+    top: 40%;
+    left: 5%;
+    cursor: pointer;
+  }
+
+
+.next:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+
