--- a/style/style.css
+++ b/style/style.css
@@ -549,8 +549,6 @@ footer {
 }
 
 
-
-
 .spisok {
     width: 100%;
     background-color: darkorange;
@@ -578,4 +576,16 @@ footer {
     margin-top: 30px;
     transition: 1s;
 
+}
+
+
+.calk {
+    background-color: #fff;
+    width: 100%;
+    min-height: 400px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
 }
