--- a/style/style.css
+++ b/style/style.css
@@ -636,4 +636,12 @@ footer {
    height: 100%;
 }
 
+
+
+.content {
+    min-height: 500px;
+    background-color: #fff;
+    border-radius: 20px;
+    margin: 50px 0;
+}
  
