--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&family=Rubik+Wet+Paint&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&family=Raleway:wght@200&family=Rubik+Wet+Paint&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -605,7 +606,7 @@ footer {
     display: flex;
     align-items: center;
     flex-direction: column;
-    
+
 }
 
 .bg_left button {
@@ -627,12 +628,12 @@ footer {
 }
 
 .bg_right {
-   width: 100%;
+    width: 100%;
     height: 100%;
 }
 
 .bg_right video {
-   height: 100%;
+    height: 100%;
 }
 
 
@@ -694,25 +695,67 @@ footer {
     margin-bottom: 30px;
 
 }
- 
+
 
 .game {
-    background-color: #fff;
+    font-family: 'Montserrat Alternates', sans-serif;
+    background-image: url('https://kartinkin.net/uploads/posts/2021-07/1625589475_1-kartinkin-com-p-karti-mira-iz-anime-anime-krasivo-1.png');
     position: relative;
     width: 100%;
-height: 300px;
-margin-top: 50px;
+    height: 700px;
+    margin-top: 50px;
+    cursor: url('https://www.cursor.cc/cursor/306/170/cursor.png') 2 2, default;
+    border-radius: 30px;
+    box-shadow: 0 32px 32px rgba(0, 0, 0, 0.1);
+
+
 }
 
 .game-block {
     position: absolute;
-    width: 30px;
-    height: 30px;
-    background-color: red;
+    width: 170px;
+    height: 140px;
+    background-image: url('https://1.bp.blogspot.com/-EjycbR_DD5w/WueZL0fD_EI/AAAAAAAABxo/58bWaJ_VJbIqPgO-towc2kh0rcYYF0R6wCLcBGAs/s320/Dragon%2BGif%2B1.gif');
+    background-size: cover;
     
-}
-.game-block:hover{
-    box-shadow: 0 12px 12px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
 
 }
+
+
+
+.game-btn {
+    position: absolute;
+    left: 45%;
+    top: 40%;
+    background-color: rgb(0, 0, 0);
+    color: #fff;
+    border-radius: 20px;
+    padding: 20px 20px;
+    border: 3px solid #fff;
+
+}
+
+
+.end {
+    position: absolute;
+    display: none;
+    left: 25%;
+    top: 15%;
+    width: 550px;
+    height: 450px;
+    background-image: url('https://phonoteka.org/uploads/posts/2021-05/1620143392_33-phonoteka_org-p-svitki-fon-48.png');
+    z-index: 99999999;
+    background-size: cover;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 200;
+    font-size: 35px;
+   
+}
+
+
+.end-text {
+    position: absolute;
+    top: 50%;                         
+    transform: translate(50%, -50%)
+}
+
