--- a/style/style.css
+++ b/style/style.css
@@ -794,8 +794,7 @@ footer {
 
 .btnpre, .btnnex {
     height: 100%;
-    width: 50px;
-    background: rgba(0, 0, 0, 0.377);
+    width: 100px;
     cursor: pointer;
     position: absolute;
     z-index: 2;
@@ -805,6 +804,16 @@ footer {
     align-items: center;
     color: #fff;
     font-size:25px;
+    background: none;
+}
+
+.btnnex:hover {
+    background: rgba(0, 0, 0, 0.377);
+}
+
+.btnpre:hover {
+    background: rgba(0, 0, 0, 0.377);
+
 }
 
 .btnnex {
@@ -816,16 +825,44 @@ footer {
 }
 
 .addAni {
-    animation: ani 1.5s forwards;
-    opacity: 0;
+    animation: ani .5s forwards;
 }
 
 @keyframes ani {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 0;
+    }
+  }
+
+  button ,button:focus {
+    outline: none;
+    border: 0;
   }
 
 
  
+
+.mini {
+    position: absolute;
+    bottom: 10px;
+    z-index: 99999;
+    width: 100%;
+}
+
+.mini ul {
+    display: flex;
+    justify-content: center;
+
+}
+
+.mini ul li {
+    width: 20px;
+    height: 5px;
+    background: #fff;
+    cursor: pointer;
+}
 
 
